--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -25,26 +25,26 @@ jobs:
         with:
           go-version: '1.23'
 
-      - name: Install gomobile (compatible commit)
+      - name: Install gomobile (compatible commit + fix dependencies)
         run: |
           go install golang.org/x/mobile/cmd/gomobile@b56b3793a9c4d32d268100ae916f12316aa05d47
+          go get golang.org/x/mobile/bind
+          go get golang.org/x/mobile/cmd/gobind
           export PATH=$PATH:$(go env GOPATH)/bin
           gomobile init
           gomobile version
 
-      - name: Install compatible NDK (r23 for gomobile)
+      - name: Install compatible NDK (r23)
         run: |
           wget https://dl.google.com/android/repository/android-ndk-r23c-linux.zip -O ndk.zip
           unzip ndk.zip -d $HOME/android-ndk
           export ANDROID_NDK_HOME=$HOME/android-ndk/android-ndk-r23c
           echo "ANDROID_NDK_HOME=$ANDROID_NDK_HOME" >> $GITHUB_ENV
 
-      - name: Build Go bindings (bind commons package only)
+      - name: Build Go bindings (commons package)
         run: |
           cd ci
-          gomobile bind -target=android \
-            -o ../android/pikapika.aar \
-            ./commons
+          gomobile bind -target=android -o ../android/pikapika.aar ./commons
           ls -la ../android/pikapika.aar || echo "aar not generated!"
 
       - name: Build APK
