--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -23,38 +23,37 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.25'  # 用 1.25 兼容 latest gomobile
+          go-version: '1.25'  # 必须用 1.25+ 才能 install gomobile@latest
 
-      - name: Install gomobile and dependencies
+      - name: Install gomobile & gobind (fix dependency)
         run: |
+          # 先安装 gomobile 和 gobind
           go install golang.org/x/mobile/cmd/gomobile@latest
           go install golang.org/x/mobile/cmd/gobind@latest
+          # 手动确保 bind 包可用（CI 环境常见坑）
+          go mod init temp-mod  # 临时创建模块，让 go get 工作
           go get golang.org/x/mobile/bind
           go get golang.org/x/mobile/cmd/gobind
+          rm go.mod go.sum  # 清理临时模块
           export PATH=$PATH:$(go env GOPATH)/bin
           gomobile init
           gomobile version
 
-      - name: Install compatible NDK (r23)
+      - name: Install compatible NDK (r23 for gomobile API 16 compatibility)
         run: |
           wget https://dl.google.com/android/repository/android-ndk-r23c-linux.zip -O ndk.zip
           unzip ndk.zip -d $HOME/android-ndk
           export ANDROID_NDK_HOME=$HOME/android-ndk/android-ndk-r23c
           echo "ANDROID_NDK_HOME=$ANDROID_NDK_HOME" >> $GITHUB_ENV
 
-      - name: Build Go bindings (commons package)
+      - name: Build Go bindings (only commons - non-main package)
         run: |
           cd ci
           gomobile bind -target=android -o ../android/pikapika.aar ./commons
           ls -la ../android/pikapika.aar || echo "aar not generated!"
 
       - name: Build APK
-        run: flutter build apk --release --split-per-abi
-
-      - name: Debug output files
-        run: |
-          ls -la build/app/outputs/flutter-apk/ || true
-          ls -la android/ || true
+        run: flutter build apk --release --split-per-abi --verbose
 
       - name: Upload APK artifacts
         uses: actions/upload-artifact@v4
